--- a/OneDo/Views/AboutPage.xaml
+++ b/OneDo/Views/AboutPage.xaml
@@ -4,7 +4,7 @@
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:views="using:OneDo.Views"
-                DataContext="{Binding AboutPage, Source={StaticResource ViewModelLocator}}"
+                DataContext="{Binding AboutPage, Source={StaticResource Locator}}"
                 mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
