Pozměněná validace s pravidly pro celé modely a jednotlivé vlastnosti

--- a/OneDo/Views/TodoPage.xaml
+++ b/OneDo/Views/TodoPage.xaml
@@ -10,7 +10,9 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="24,12">
             <TextBlock Text="Todo Page" Style="{ThemeResource HeaderTextBlockStyle}" />
-            <TextBox Text="{x:Bind VM.Title, Mode=TwoWay}" />
+            <TextBox Header="Title" Text="{x:Bind VM.Title, Mode=TwoWay}" />
+            <TextBox Header="Note" Text="{x:Bind VM.Note, Mode=TwoWay}" />
+            <CalendarDatePicker Header="Date" Date="{x:Bind VM.Date, Mode=TwoWay}" HorizontalAlignment="Stretch" />
         </StackPanel>
     </Grid>
 </views:PageBase>
