--- a/OneDo/Views/Pages/SplashScreenPage.xaml
+++ b/OneDo/Views/Pages/SplashScreenPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="OneDo.Views.SplashScreenPage"
+﻿<Page x:Class="OneDo.Views.Pages.SplashScreenPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
