--- a/OneDo/Views/Settings/SettingsView.xaml
+++ b/OneDo/Views/Settings/SettingsView.xaml
@@ -1,10 +1,10 @@
-﻿<views:PageBase x:Class="OneDo.Views.SettingsPage"
+﻿<views:PageBase x:Class="OneDo.Views.Pages.SettingsView"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:views="using:OneDo.Views"
-                DataContext="{Binding SettingsPage, Source={StaticResource Locator}}"
+                DataContext="{Binding Settings, Source={StaticResource Locator}}"
                 mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
