--- a/OneDo/Views/MainPage.xaml
+++ b/OneDo/Views/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<views:PageBase x:Class="OneDo.Views.Pages.MainPage"
+﻿<views:PageBase x:Class="OneDo.Views.MainPage"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,14 +9,14 @@
                 xmlns:controls="using:OneDo.Controls"
                 xmlns:converters="using:OneDo.Converters"
                 xmlns:views="using:OneDo.Views"
-                xmlns:viewModels="using:OneDo.ViewModels"
+                xmlns:viewModelItems="using:OneDo.ViewModels.Items"
                 xmlns:objects="using:OneDo.Model.Data.Objects"
                 DataContext="{Binding MainPage, Source={StaticResource Locator}}"
                 mc:Ignorable="d">
 
     <Page.Resources>
 
-        <DataTemplate x:Key="TodoItemTemplate" x:DataType="viewModels:TodoItemViewModel">
+        <DataTemplate x:Key="TodoItemTemplate" x:DataType="viewModelItems:TodoItemViewModel">
             <StackPanel>
                 <TextBlock Text="{x:Bind Title, Mode=OneWay}" />
             </StackPanel>
@@ -42,10 +42,33 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="WindowStates">
+                <VisualState x:Name="WideState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="800" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="TodoListView.HorizontalAlignment" Value="Center" />
+                        <Setter Target="TodoListView.Width" Value="640" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="NarrowState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="TodoListView.HorizontalAlignment" Value="Stretch" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
         <controls:HamburgerTitleBar Grid.Row="0"
                                     Title="Inbox" />
 
-        <ListView Grid.Row="1"
+        <ListView x:Name="TodoListView"
+                  Grid.Row="1"
                   ItemsSource="{x:Bind VM.TodoItems, Mode=OneWay}"
                   ItemTemplate="{StaticResource TodoItemTemplate}"
                   IsItemClickEnabled="True"
