--- a/OneDo/Views/MainPage.xaml
+++ b/OneDo/Views/MainPage.xaml
@@ -26,42 +26,40 @@
 
     </Page.Resources>
 
-    <SplitView IsPaneOpen="{x:Bind VM.IsTodoEditorOpen, Mode=OneWay}" PanePlacement="Right">
-        <SplitView.Pane>
-            <viewEditors:TodoEditor DataContext="{x:Bind VM.TodoEditor, Mode=OneWay}" />
-        </SplitView.Pane>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-                  Grid.Row="0">
+        <ListView x:Name="TodoListView"
+                  Grid.Row="0"
+                  ItemsSource="{x:Bind VM.TodoItems, Mode=OneWay}"
+                  ItemTemplate="{StaticResource TodoItemTemplate}"
+                  IsItemClickEnabled="True"
+                  SelectionMode="None">
+            <i:Interaction.Behaviors>
+                <ic:EventTriggerBehavior EventName="ItemClick">
+                    <behaviors:ItemClickAction Command="{x:Bind VM.TodoItemSelectedCommand}" />
+                </ic:EventTriggerBehavior>
+            </i:Interaction.Behaviors>
+        </ListView>
 
-                <ListView x:Name="TodoListView"
-                          Grid.Row="1"
-                          ItemsSource="{x:Bind VM.TodoItems, Mode=OneWay}"
-                          ItemTemplate="{StaticResource TodoItemTemplate}"
-                          IsItemClickEnabled="True"
-                          SelectionMode="None">
-                    <i:Interaction.Behaviors>
-                        <ic:EventTriggerBehavior EventName="ItemClick">
-                            <behaviors:ItemClickAction Command="{x:Bind VM.TodoItemClickCommand}" />
-                        </ic:EventTriggerBehavior>
-                    </i:Interaction.Behaviors>
-                </ListView>
-            </Grid>
+        <CommandBar Grid.RowSpan="2">
+            <AppBarButton Label="Add to-do">
+                <AppBarButton.Icon>
+                    <FontIcon Glyph="&#xE710;"/>
+                </AppBarButton.Icon>
+            </AppBarButton>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Icon="Redo" Label="Reset data" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
 
-            <CommandBar Grid.Row="1">
-                <CommandBar.PrimaryCommands>
-                    <AppBarButton Label="Add to-do">
-                        <AppBarButton.Icon>
-                            <FontIcon Glyph="&#xE710;"/>
-                        </AppBarButton.Icon>
-                    </AppBarButton>
-                </CommandBar.PrimaryCommands>
-            </CommandBar>
+        <Grid Grid.RowSpan="2" Visibility="Collapsed">
+            <viewEditors:TodoEditor DataContext="{x:Bind VM.TodoEditor, Mode=OneWay}"
+                                    Visibility="{x:Bind VM.IsTodoEditorOpen, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
         </Grid>
-    </SplitView>
+
+    </Grid>
 </views:PageBase>
