Reset data menu item

--- a/OneDo/Views/MainPage.xaml
+++ b/OneDo/Views/MainPage.xaml
@@ -52,7 +52,7 @@
                 </AppBarButton.Icon>
             </AppBarButton>
             <CommandBar.SecondaryCommands>
-                <AppBarButton Icon="Redo" Label="Reset data" />
+                <AppBarButton Label="Reset data" Command="{x:Bind VM.ResetDataCommand}" />
             </CommandBar.SecondaryCommands>
         </CommandBar>
 
