--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="OneDo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:viewModel="using:OneDo.ViewModels"
+             xmlns:vm="using:OneDo.ViewModels"
              xmlns:converters="using:OneDo.Converters"
              RequestedTheme="Light">
 
@@ -11,12 +11,20 @@
                 <ResourceDictionary Source="ms-appx:///Themes/HamburgerStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <viewModel:ViewModelLocator x:Key="Locator" />
+            <vm:ViewModelLocator x:Key="Locator" />
 
             <converters:ChangeTypeConverter x:Key="ChangeTypeConverter" />
             <converters:StringFormatConverter x:Key="StringFormatConverter" />
-            <converters:ConditionConverter x:Key="ConditionConverter" />
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+            <converters:ConditionConverter x:Key="NullToVisibilityConverter"
+                                           If="{x:Null}">
+                <converters:ConditionConverter.Then>
+                    <Visibility>Collapsed</Visibility>
+                </converters:ConditionConverter.Then>
+                <converters:ConditionConverter.Else>
+                    <Visibility>Visible</Visibility>
+                </converters:ConditionConverter.Else>
+            </converters:ConditionConverter>
 
         </ResourceDictionary>
     </Application.Resources>
