--- a/OneDo/Views/Flyouts/TodoEditor.xaml
+++ b/OneDo/Views/Flyouts/TodoEditor.xaml
@@ -1,12 +1,12 @@
-﻿<views:EditorBase x:Class="OneDo.Views.Editors.TodoEditor"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                  xmlns:views="using:OneDo.Views"
-                  mc:Ignorable="d"
-                  d:DesignHeight="640"
-                  d:DesignWidth="360">
+﻿<v:FlyoutBase x:Class="OneDo.Views.Flyouts.TodoEditor"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:v="using:OneDo.Views"
+              mc:Ignorable="d"
+              d:DesignHeight="640"
+              d:DesignWidth="360">
     
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -31,4 +31,4 @@
             </CommandBar.PrimaryCommands>
         </CommandBar>
     </Grid>
-</views:EditorBase>
+</v:FlyoutBase>
